--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -9,7 +9,7 @@
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "/App.js",
+      "dest": "/index.js",
       "methods": ["GET", "POST", "DELETE", "PATCH", "OPTIONS"],
       "headers": {
         "Access-Control-Allow-Origin": "*",
