--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -2,14 +2,14 @@
   "version": 2,
   "builds": [
     {
-      "src": "App.js",
+      "src": "index.js",
       "use": "@vercel/node"
     }
   ],
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "/index.js",
+      "dest": "index.js",
       "methods": ["GET", "POST", "DELETE", "PATCH", "OPTIONS"],
       "headers": {
         "Access-Control-Allow-Origin": "*",
@@ -19,3 +19,4 @@
     }
   ]
 }
+
