--- a/frontend/package.json
+++ b/frontend/package.json
@@ -59,7 +59,10 @@
       "last 1 safari version"
     ]
   },
+    "plugins": ["@babel/plugin-proposal-private-property-in-object"]
+  ,
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "react-app-rewired": "^2.2.1"
   }
 }
